<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bomberman</string>
    <string name="action_settings">Settings</string>
    
    <string name="game_name">Bomberman Multiplayer</string>
    <string name="player_name">Player name</string>
    <string name="play_button">Play</string>
    
    <string name="player_name_short">Name</string>
    <string name="player_score">Score</string>
    <string name="time_left">Time</string>
    <string name="player_count">Players</string>
    
    <string name="title_activity_game">Bomberman</string>
    <string name="title_activity_score">ScoreActivity</string>
    
    
    <string name="player_choice_prompt">Choose a player</string>
    <string-array name="player_choice">
        <item>White</item>
        <item>Blue</item>
        <item>Red</item>
    </string-array>

</resources>
