<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".GameActivity" >

    <RelativeLayout
        android:id="@+id/dashboard"
        android:layout_width="fill_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/playerNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:text="@string/player_name_short" />
        
        <TextView
            android:id="@+id/playerCountLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:text="@string/player_count" />

        <TextView
            android:id="@+id/playerScoreLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="60dp"
            android:layout_toRightOf="@id/playerNameLabel"
            android:text="@string/player_score" />

        <TextView
            android:id="@+id/timeLeftLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="40dp"
            android:layout_toLeftOf="@id/playerCountLabel"
            android:text="@string/time_left" />

        <TextView
            android:id="@+id/playerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/playerNameLabel"
            android:layout_alignLeft="@id/playerNameLabel"
            android:layout_marginBottom="10dp"
            android:text="Default"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/playerScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/playerScoreLabel"
            android:layout_alignLeft="@id/playerScoreLabel"
            android:layout_alignRight="@+id/playerScoreLabel"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:text="0"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <TextView
            android:id="@+id/timeLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/timeLeftLabel"
            android:layout_alignLeft="@id/timeLeftLabel"
            android:layout_alignRight="@+id/timeLeftLabel"
            android:layout_marginBottom="10dp"
            android:text="120"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <TextView
            android:id="@+id/playerCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/playerCountLabel"
            android:layout_alignLeft="@id/playerCountLabel"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:text="3"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/gameLayout"
        android:layout_width="fill_parent"
        android:layout_height="360dp"
        android:layout_below="@id/dashboard"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp">
        
    </RelativeLayout>
    
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/gameLayout" >

        <ImageView
            android:id="@+id/upButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/btn_up" 
            android:onClick="onMoveUp"/>

        <ImageView
            android:id="@+id/downButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignLeft="@+id/upButton"
            android:layout_alignParentBottom="true"
            android:src="@drawable/btn_down" 
            android:onClick="onMoveDown"/>

        <ImageView
            android:id="@+id/leftButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/upButton"
            android:src="@drawable/btn_left" 
            android:onClick="onMoveLeft"/>

        <ImageView
            android:id="@+id/rightButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/upButton"
            android:src="@drawable/btn_right" 
            android:onClick="onMoveRight"/>

        <ImageView
            android:id="@+id/bombButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/btn_bomb"
            android:onClick="onBomb"/>

        <ImageView
            android:id="@+id/pauseButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="40dp"
            android:src="@drawable/btn_pause" />

        <ImageView
            android:id="@+id/quitButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:src="@drawable/btn_quit" />

    </RelativeLayout>

</RelativeLayout>
